# apache_arrow_table

./: CMakeLists.txt  README.md
scripts/: build.sh  install_dependencies.sh
src/: arrow_table.cpp
src/parse_xml/include/: parse_xml.h
src/parse_xml/src/: parse_xml.cpp
src/utils/log/: log.h
xml_file/: book_store.xml
